Fix bullish sentiment tag font color to #34D536

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -280,7 +280,7 @@ html {
 .sentiment-bullish {
   background-color: #131712;
   border-color: #203320;
-  color: #131712;
+  color: #34D536;
 }
 
 .sentiment-bearish {
